# dijon

./: .cursorignore  .gitignore  .template_origin.yml  AGENTS.md  AGENTS_CURSOR.md  ARCHITECTURE.md  DATA.md  PROJECT.md  README.md  TODO.txt  package-lock.json  pyproject.toml
.cursor/: hooks.json
.cursor/commands/: commit-full.md  commit-msg.md  commit.md
.cursor/rules/: 000-core.mdc  001-meta-rules.mdc  010-output-discipline.mdc  020-env-dependencies.mdc  030-init-files.mdc  050-time-canonical.mdc  200-cli-implementation.mdc  500-database-safety.mdc  700-testing-expectations.mdc  800-data-pipeline-light-contracts.mdc
data/: manifest_schema.json
data/sets/: leading.yaml
docs/: cli_implementation.md  novelty-structure.md  reaper-state-chunk-definitions.md  side-mission.py  testing.md  time.md
docs/_plans/: template_cli_implementation_plan.md
docs/cli_tasks/: add_action_across_sources.md  add_data_source.md
docs/paper/: main.aux  main.blg  main.fdb_latexmk  (+3 more)
env/: environment-260118.yml  environment.yml
musescore/: The Blackest Crow.mscz  The Blackest Crow.musicxml
notebooks/: 00_setup.ipynb  01.ipynb  my_beats.ipynb  my_chromagram.ipynb
reaper/: default-with-track.RPP
schemas/: manifest_schema.json
scripts/: init_repo.py  normalize_raw_audio.py  resample_raw_audio.py  resample_raw_audio.sh  template_hooks.py
tests/: conftest.py  test_beats_pipeline.py  test_chromagram_methods.py  test_chromagram_pipeline.py  test_init_repo.py  test_manifest.py  test_meter_pipeline.py  test_novelty_pipeline.py  test_reaper_markers.py  test_sets_populate.py  test_smoke.py  test_tempogram_pipeline.py  test_youtube_acquire.py  test_youtube_ingest.py
(+259 files in other folders)
