# Paste this file as: pyproject.toml.jinja
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dijon"
version = "0.1.0"
description = "Template project for a Python CLI application."
readme = "README.md"
requires-python = ">= 3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
]
dependencies = [
    "typer",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]

markers = [
  "unit: pure logic, no I/O",
  "integration: filesystem and/or sqlite",
  "slow: intentionally slow tests"
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "B",
    "I",
    "UP",
    "ANN",
    "D",
    "S",
    "C90",
    "PLR",
    "TID",
]
ignore = [
    "ANN101",
    "ANN102",
    "D100",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ANN",
    "D",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.isort]
known-first-party = []
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true